--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -18,7 +18,8 @@ h1 {
 }
 
 .main {
-    width: 100%;
+    position: relative;
+    width: 100vw;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -76,7 +77,7 @@ h1 {
 }
 
 #sort-container {
-    width: 20%;
+    width: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -95,24 +96,26 @@ h1 {
 }
 
 #product-list {
-    width: 70%;
-    max-width: 600px;
+    width: 90%;
+    /* max-width: 600px; */
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
 }
 
 .product {
     border: 1px solid #ccc;
     padding: 10px;
-    margin-bottom: 10px;
+    margin: 10px;
     display: flex;
     align-items: center;
     border-radius: 4px;
     background-color: #fff;
-    width: 100%;
-    max-height: 400px;
+    width: 25%;
+    min-width: 300px;
+    /* max-height: 400px; */
 }
 
 .product-image {
@@ -138,13 +141,17 @@ h1 {
     flex-direction: column;
     justify-content: space-between;
 }
-
+.product-details h2 {
+    font-size: 18px
+}
 .product-details img.site-logo {
-    position: absolute;
+    /* position: absolute;
     bottom: 10px;
-    right: 10px;
+    right: 10px; */
     max-width: 40px;
     border-radius: 4px;
+    position: relative;
+    left: 80%;
 }
 
 .loading {
@@ -155,19 +162,33 @@ h1 {
     top: 45%;
 }
 
+#github-logo {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    max-width: 70px;
+    border-radius: 4px;
+}
+#github-logo:hover {
+    opacity: 0.8;
+}
+#github-logo img {
+    max-width: 100%;
+}
+
 @media (max-width: 600px) {
-    .product {
+    .container {
         flex-direction: column;
-        align-items: flex-start;
+        min-width: 80%;
+    }
+    #search-container {
+        width: 80%;
+    }
+    #product-list {
+        width: 80%;
+    }
+    #github-logo {
+        display: none;
     }
 
-    .product img {
-        margin-bottom: 10px;
-        max-width: 100%;
-    }
-
-    .product-details img.site-logo {
-        position: static;
-        margin-top: 10px;
-    }
 }
