--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -8,7 +8,7 @@ body {
     justify-content: center;
     min-height: 100vh;
     width: 100vw;
-    background-color: #f5f5f5;
+    background-color: #000000;
     color: #333;
     overflow-x: hidden;
 }
@@ -104,7 +104,7 @@ h1 {
 }
 
 .product {
-    background-color: white;
+    background-color: #fbeaff;
     border: 1px solid #ccc;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -196,16 +196,28 @@ h1 {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    max-width: 50px;
+    width: 60px;
+    height: 60px;
     transition: transform 0.3s;
+    background-color: #fff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #github-logo:hover {
     transform: scale(1.1);
 }
 
+#github-logo a {
+    width: 80%;
+    height: 80%;
+}
+
 #github-logo img {
-    max-width: 100%;
+    width: 100%;
+    /* border-radius: 50%; */
 }
 
 @media (max-width: 768px) {
