--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -9,7 +9,7 @@ body {
     min-height: 100vh;
     width: 100vw;
     background-color: #000000;
-    color: #333;
+    color: #000000;
     overflow-x: hidden;
 }
 
@@ -186,7 +186,7 @@ h1 {
 .loading {
     text-align: center;
     font-size: 1.5em;
-    color: #333;
+    color: #ffffff;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
